--- a/themes/academic/layouts/partials/widgets/contact.html
+++ b/themes/academic/layouts/partials/widgets/contact.html
@@ -17,7 +17,7 @@
       <li>
         <i class="fa-li fa fa-envelope fa-2x" aria-hidden="true"></i>
         <span id="person-email" itemprop="email">
-        {{- if $autolink }}<a href="mailto:{{ . }}">{{ . }}</a>{{ else }}{{ . }}{{ end -}}
+        {{- if $autolink }}Contact head of the team: <a href="mailto:{{ . }}">{{ . }}</a>{{ else }}{{ . }}{{ end -}}
         </span>
       </li>
       {{ end }}
