fixing 'work at in'

--- a/layouts/partials/widgets/team.html
+++ b/layouts/partials/widgets/team.html
@@ -32,7 +32,7 @@
           {{ end }}
   
           {{ with .worksAt }}
-          <h5>Works at in {{ . | markdownify }}</h5>
+          <h5>{{ . | markdownify }}</h5>
           {{ end }}
   
           {{ with .scope }}
