--- a/layouts/partials/widgets/team.html
+++ b/layouts/partials/widgets/team.html
@@ -9,19 +9,11 @@
   </div>
 </div>
 <div class="row flexbox{{ if $page.Params.center }} flexbox-center{{ end }}">
-  {{ range $page.Params.team.members }}
-    <div class="col-sm-2 col">
-      <div class="team-member">
-        {{ $url := printf "img/team/%s" .img }}
-        <img src="{{ $url | absURL }}" class="img-responsive img-circle" alt="{{ .name }}" link="{{ .url }}">
-      </div>
-    </div>
-  {{ end }}
-</div>
-<div class="row flexbox{{ if $page.Params.center }} flexbox-center{{ end }}">
     {{ range $page.Params.team.members }}
       <div class="col-sm-2 col">
         <div class="team-member">
+          {{ $url := printf "img/team/%s" .img }}
+          <img src="{{ $url | absURL }}" class="img-responsive img-circle" alt="{{ .name }}" link="{{ .url }}">
           <h3>{{ .name | markdownify }}</h3>
   
           {{ with .position }}
@@ -45,7 +37,92 @@
   
           <ul class="list-inline social-buttons">
             {{ range .social }}
-              <li><a href="{{ index . 1 }}"><i class="fa {{ index . 0 }}"></i></a></li>
+            <li><a href="{{ index . 1 }}"><i class="fa {{ index . 0 }}"></i></a></li>
+
+            {{ end }}
+          </ul>
+  
+          {{ with .bio }}
+          <p class="team-bio">{{ . | markdownify }}</p>
+          {{ end }}
+  
+        </div>
+      </div>
+    {{ end }}
+  </div>
+  <div class="row flexbox{{ if $page.Params.center }} flexbox-center{{ end }}">
+    {{ range $page.Params.team.students }}
+      <div class="col-sm-2 col">
+        <div class="team-member">
+          {{ $url := printf "img/team/%s" .img }}
+          <img src="{{ $url | absURL }}" class="img-responsive img-circle" alt="{{ .name }}" link="{{ .url }}">
+          <h3>{{ .name | markdownify }}</h3>
+  
+          {{ with .position }}
+          <h4>{{ . | markdownify }}</h4>
+          {{ end }}
+          {{ with .reportsTo }}
+          <h5 class="report">Reports to {{ . | markdownify }}</h5>
+          {{ end }}
+  
+          {{ with .worksAt }}
+          <h5>{{ . | markdownify }}</h5>
+          {{ end }}
+  
+          {{ with .scope }}
+          <ul>
+            {{ range . }}
+              <li>{{ . | markdownify }}</li>
+            {{ end }}
+          </ul>
+          {{ end }}
+  
+          <ul class="list-inline social-buttons">
+            {{ range .social }}
+            <li><a href="{{ index . 1 }}"><i class="fa {{ index . 0 }}"></i></a></li>
+
+            {{ end }}
+          </ul>
+  
+          {{ with .bio }}
+          <p class="team-bio">{{ . | markdownify }}</p>
+          {{ end }}
+  
+        </div>
+      </div>
+    {{ end }}
+  </div>
+  <div class="row flexbox{{ if $page.Params.center }} flexbox-center{{ end }}">
+    {{ range $page.Params.team.associates }}
+      <div class="col-sm-2 col">
+        <div class="team-member">
+          {{ $url := printf "img/team/%s" .img }}
+          <img src="{{ $url | absURL }}" class="img-responsive img-circle" alt="{{ .name }}" link="{{ .url }}">
+          <h3>{{ .name | markdownify }}</h3>
+  
+          {{ with .position }}
+          <h4>{{ . | markdownify }}</h4>
+          {{ end }}
+          {{ with .reportsTo }}
+          <h5 class="report">Reports to {{ . | markdownify }}</h5>
+          {{ end }}
+  
+          {{ with .worksAt }}
+          <h5>{{ . | markdownify }}</h5>
+          {{ end }}
+  
+          {{ with .scope }}
+          <ul>
+            {{ range . }}
+              <li>{{ . | markdownify }}</li>
+            {{ end }}
+          </ul>
+          {{ end }}
+  
+          <ul class="list-inline social-buttons">
+            {{ range .social }}
+            <li><a href="{{ index . 1 }}"><i class="fa {{ index . 0 }}"></i></a></li>
+
             {{ end }}
           </ul>
   
