--- a/layouts/shortcodes/theme7.html
+++ b/layouts/shortcodes/theme7.html
@@ -1,1 +1,1 @@
-<a href="https://www.irit.fr/-Topic-7-Safety-of-Software-?lang=en)">Reliable Software Development</a>
+<a href="https://www.irit.fr/-Topic-7-Safety-of-Software-?lang=en)">Reliability of Systems and Software</a>
