--- a/css/agencyJMB.css
+++ b/css/agencyJMB.css
@@ -29,6 +29,9 @@
 .team-member img {
     margin: 0 auto;
     border: 3px solid #fff;
+    max-width: 200px !important;
+    width: 160px !important;
+    height: 160px !important;
 }
 
 .team-member p {
@@ -81,9 +84,11 @@
     padding: 15px
 }
 
+.img-responsive,
+
 .img-circle {
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    max-width: 80%;
+    height: auto;
   }
-  
+
