Add publications with HTML tag object

--- a/themes/academic/layouts/partials/widgets/publications.html
+++ b/themes/academic/layouts/partials/widgets/publications.html
@@ -15,7 +15,7 @@
       </a>
     </p>
     {{ end }}
-  </div>
+  </div><!--
   <div class="col-xs-12 col-md-8">
     {{ with $page.Content }}<p>{{ . | markdownify }}</p>{{ end }}
 
@@ -36,5 +36,11 @@
       {{ end }}
     {{ end }}
 
+  </div>--->
+  <div>
+    <object data="https://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?auteurs_EPI=jean-michel+bruel%3BPierre-Jean+Charrel%3BBeno%C3%AEt+Combemale%3BBernard+Coulette%3BSophie+Ebersold&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=annee_publi&tri_exp2=typdoc&tri_exp3=date_publi&ordre_aff=TA&Fen=Rech&lang=fr&Formate=Oui&css=../css/VisuCondense.css"
+      width="100%"
+      height="500">
+    </object>
   </div>
 </div>
