--- a/themes/academic/layouts/partials/widgets/publications.html
+++ b/themes/academic/layouts/partials/widgets/publications.html
@@ -37,7 +37,7 @@
     {{ end }}
 
   </div>--->
-  <div>
+  <div class="col-xs-12 col-md-8">
     <object data="https://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?auteurs_EPI=jean-michel+bruel%3BPierre-Jean+Charrel%3BBeno%C3%AEt+Combemale%3BBernard+Coulette%3BSophie+Ebersold&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=annee_publi&tri_exp2=typdoc&tri_exp3=date_publi&ordre_aff=TA&Fen=Rech&lang=fr&Formate=Oui&css=../css/VisuCondense.css"
       width="100%"
       height="500">
